<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_main"
        app:itemTextColor="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewSSID" />

        <TextView
            android:id="@+id/textViewSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/SSIDHeader"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/textViewBSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/BSSIDHeader"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerViewAPs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSSID" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnScanAPs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/cardBtnRanging"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/btn2ScanAPs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickScanAPs"
                android:textAllCaps="false"
                android:text="@string/ScanAPS"
                android:textSize="18sp"
                android:background="?attr/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnRanging"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/cardBtnPositioning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/btn3Ranging"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickRangingAPs"
                android:textAllCaps="false"
                android:text="@string/Ranging"
                android:textSize="18sp"
                android:background="?attr/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnPositioning"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/btn4StartPositioning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickStartPositioning"
                android:textAllCaps="false"
                android:text="@string/Localisation"
                android:textSize="18sp"
                android:background="?attr/colorPrimary" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
