<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textViewLocationX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="330dp"
            android:rotation="90"
            android:text="LocationX" />

        <TextView
            android:id="@+id/textViewLocationY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="330dp"
            android:rotation="90"
            android:text="LocationY" />

        <EditText
            android:id="@+id/editText_server"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:rotation="90"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-10dp"
            android:onClick="onClickStartLoggingData"
            android:rotation="90"/>

        <Button
            android:id="@+id/btnVisualise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-10dp"
            android:text="@string/ChangeVisualisationButton"
            android:textAllCaps="false"
            android:onClick="onClickChangeVisualisation"/>

    </RelativeLayout>

        <ImageView
            android:id="@+id/imageViewFloorplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/FloorPlanContentDescription"
            android:scaleType="fitXY"
            android:src="@drawable/floor_plan" />

        <ImageView
            android:id="@+id/imageViewCircle1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/TrilaterationCircle"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/imageViewCircle2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/TrilaterationCircle"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/imageViewCircle3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/TrilaterationCircle"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/imageViewLocationPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/LocationPinContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/location_pin" />

        <ImageView
            android:id="@+id/imageViewAP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

        <ImageView
            android:id="@+id/imageViewAP8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/APContentDescription"
            android:rotation="90"
            app:srcCompat="@drawable/ap_pin" />

    </FrameLayout>

